========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2018-05-28

  - Fixed bug with tempdir being a symlink on Mac, which was making one test
    fail.

  - Fixed unit tests which failed due to timestamps getting rendered with an
    offset on a Mac while on a train in Japan.

  - Render tags and links on Document directive.

  - Minor bug fix: don't fail on rendering a MISSING instnace.


* Version: 2.1.2-devel

  - In 'divert_expenses' plugin, allow limiting diversions to one posting only.

  - Fixed unit test for git checkouts. This should fix the Travis-CI build.


* Version: 2.1.2

2018-05-12

  - Fixed setup.py to catch exceptions in the absence of git as well.


* Version: 2.1.1

2018-05-12

  - Fixed installation with missing version string.


* Version: 2.1.0

2018-05-12

  - Added back lexer test from Adrian Medrano Calvo's UTF8 changes to head.


2018-05-08

  - Fixed #287: In the price fetcher, store the datetime instances as
    naive-in-UTC in order to avoid a serialization problem with older Python
    versions.


2018-05-06

  - Changes to support git versioning if hg versioning is not available.


2018-05-05

  - Fixed #289: Add option to find beancount version. All scripts now support
    --version.

  - Amended PR64 to remove the need for __getitem__(). Clarified docstring.

  - Merged PR64 from Jakob Schnitzer: Inventory: use dict instead of list as a
    base.


2018-05-04

  - Fixed #290: Validation of account name components was incorrectly swapped.


2018-05-03

  - Amended PR74: Adding a new unit test, fail if tags / link appear after the
    first posting. Performance amendment to tags/links and clarification to the
    freezing of tags & links and their default values.

  - Merged PR74 / Fixed #99: Allow tags and links to be spread over several
    lines.

  - Amended PR14: added simple unit testing for regexp, changes in parsing UTF-8